# UnderwritingAI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 01701d0f4200_seed_data_sources_and_field_catalog.py  0a66ebe386d6_add_shown_flag_to_candidate_matches.py  13c3519f0466_project_scenario_overrides.py  14ae022ce10a_seed_default_roles_and_permissions.py  1a634df3f7be_discovery_and_resolution_tables.py  34af1d1b2126_scenario_assumption_sets_and_results.py  3f5c4a0404ae_reporting_tables.py  6cd1d4e6aaaf_seed_discovery_fixtures_and_default_.py  77efabe20895_manual_override_detail_and_field_review_.py  807cbc9c1842_wire_live_maharera_into_acquisition.py  8c70a446a687_seed_manual_override_source_and_review_.py  8e63d4bc4437_seed_default_analytics_assumptions.py  a881941d133f_identity_and_job_tracking_tables.py  acd6d9d84c26_analytics_assumption_sets_and_forecast_.py  b762954c8571_acquisition_tables.py  c1cda87132cb_seed_default_scenario_assumptions.py  e4968392de52_document_and_ocr_job_tables.py  f16487e5b1d3_report_lifecycle_review_publish_edit_.py  fb6c16e56730_publish_immutability_trigger.py
app/: main.py
app/acquisition/: api.py  circuit_breaker.py  confidence.py  document_parser.py  document_service.py  models.py  normalization.py  orchestrator.py  override_service.py  rate_limiter.py  repository.py  schemas.py  service.py  staleness.py
docs/: ARD.md  PRD.md  SAD.md
scripts/: setup_maharera_session.py
streamlit_app/: README.md  app.py
tests/: conftest.py
(+89 files in other folders)
